--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <div class="profile">
     <h2 id="6">PROFILE</h2>
     <div class="description">
-      <img src="img/5639.jpg" alt="">
+      <img src="https://github.com/Ryou1987/ryou-miarui-j/blob/master/5639.jpg?raw=true" alt="">
       <p>RYOU HASHIMOTO (橋本 涼）<br>
         1987年生まれ栃木県出身<br>
         元美容師のサラリーマンWEBデザイナー<br>
