--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
     <div class="work">
       <div class="introduction">
         <div class="worklist fadein sample1">
-          <img  src="img/スクリーンショット 2020-08-17 15.26.43.jpg" alt="写真">
+          <img  src="file:///Users/miarui/Library/Mobile%20Documents/com~apple~CloudDocs/%E3%83%9D%E3%83%BC%E3%83%88%E3%83%AC%E3%82%A4%E3%83%88/img/スクリーンショット 2020-08-17 15.26.43.jpg" alt="写真">
           <p>模写サイトISARA</p>
         </div>
         <div class="worklist fadein sample2">
-          <img src="img/スクリーンショット 2020-08-17 16.08.26.jpg" alt="写真">
+          <img src="https://github.com/Ryou1987/ryou-miarui-j/blob/master/%E3%82%B9%E3%82%AF%E3%83%AA%E3%83%BC%E3%83%B3%E3%82%B7%E3%83%A7%E3%83%83%E3%83%88%202020-08-17%2016.08.26.jpg?raw=true" alt="写真">
           <p>ブログ運営、WordPressテーマCocoonアレンジ</p>
         </div>
         <div class="worklist fadein sample3">
-          <img src="img/スクリーンショット 2020-08-25 8.20.18.jpg" alt="写真">
+          <img src="https://github.com/Ryou1987/ryou-miarui-j/blob/master/%E3%82%B9%E3%82%AF%E3%83%AA%E3%83%BC%E3%83%B3%E3%82%B7%E3%83%A7%E3%83%83%E3%83%88%202020-08-25%208.20.18.jpg?raw=true" alt="写真">
           <p>LP製作例</p>
         </div>
     </div>
@@ -60,19 +60,19 @@
       <div class="close-modal">
         <i class="fa fa-3x fa-times close"></i>
       </div>
-      <img class="imgsample1" src="img/screencapture-isara模写2020-08-17-15_30_51.jpg" alt="模写サイト">
+      <img class="imgsample1" src="file:///Users/miarui/Library/Mobile%20Documents/com~apple~CloudDocs/%E3%83%9D%E3%83%BC%E3%83%88%E3%83%AC%E3%82%A4%E3%83%88/img/screencapture-isara模写2020-08-17-15_30_51.png" alt="模写サイト">
     </div>
     <div class="modal" id="show2">
       <div class="close-modal">
         <i class="fa fa-3x fa-times close"></i>
       </div>
-      <img class="imgsample2" src="img/screencapture-miarui-xyz-2020-08-17-16_08_39.png" alt="ブログ">
+      <img class="imgsample2" src="https://github.com/Ryou1987/ryou-miarui-j/blob/master/screencapture-miarui-xyz-2020-08-17-16_08_39.png?raw=true" alt="ブログ">
     </div>
     <div class="modal" id="show3">
       <div class="close-modal">
         <i class="fa fa-3x fa-times close"></i>
       </div>
-      <img class="imgsample3" src="img/screencapture-file-Users-miarui-Desktop-st-index-html-2020-08-24-17_05_01.png " alt="模写サイト">
+      <img class="imgsample3" src="https://github.com/Ryou1987/ryou-miarui-j/blob/master/screencapture-file-Users-miarui-Desktop-st-index-html-2020-08-24-17_05_01.png?raw=true" alt="模写サイト">
     </div>
   </main>
   <div class="skill">
@@ -85,19 +85,19 @@
     </div>
     <div class="skills-inner">
       <div>
-        <img src="img/kisspng-html-web-design-scalable-vector-graphics-world-wid-html5-icon-hd-5ab0c85c377aa0.0639325615215350682273.jpg" alt="言語">
+        <img src="https://github.com/Ryou1987/ryou-miarui-j/blob/master/kisspng-html-web-design-scalable-vector-graphics-world-wid-html5-icon-hd-5ab0c85c377aa0.0639325615215350682273.jpg?raw=true" alt="言語">
         <p>見やすさ、読みやすさ、SEOを意識したコーディングが得意です。</p>
       </div>
       <div>
-        <img style="margin:15px 0 0 0;" src="img/kisspng-css3-cascading-style-sheets-logo-html-markup-langu-5adbf15c4512b2.0914928015243636122829.jpg" alt="言語">
+        <img style="margin:15px 0 0 0;" src="https://github.com/Ryou1987/ryou-miarui-j/blob/master/kisspng-css3-cascading-style-sheets-logo-html-markup-langu-5adbf15c4512b2.0914928015243636122829.jpg?raw=true" alt="言語">
         <p style="margin-top: 2px;" >希望のデバイスに沿ったレスポンシブデザインが可能です。</p>
       </div>
       <div>
-        <img src="img/kisspng-javascript-logo-html-clip-art-javascript-logo-5b5188b1a2a1f9.2428698915320700656662.jpg" alt="言語">
+        <img src="https://github.com/Ryou1987/ryou-miarui-j/blob/master/kisspng-javascript-logo-html-clip-art-javascript-logo-5b5188b1a2a1f9.2428698915320700656662.jpg?raw=true" alt="言語">
         <p>ページに動きを与え、オリジナリティーのあるサイトを作成します。</p>
       </div>
       <div>
-        <img src="img/kisspng-web-development-jquery-ui-javascript-computer-icon-jqlogo-5ae94a5d86de89.8903081715252383655524.jpg" alt="言語">
+        <img src="https://github.com/Ryou1987/ryou-miarui-j/blob/master/kisspng-web-development-jquery-ui-javascript-computer-icon-jqlogo-5ae94a5d86de89.8903081715252383655524.jpg?raw=true" alt="言語">
         <p>アコーディオン、ハンバーガーメニュー、自動スクロールスクロールなど様々な動きに対応可能です。</p>
       </div>
     </div>
@@ -114,7 +114,7 @@
           <p>簡易お問い合わせフォーム設置</p>
           <p>納期目安１ヶ月以内</p>
         </div>
-        <img src="img/domenico-loia-hGV2TfOh0ns-unsplash.jpg" alt="画像">
+        <img src="https://github.com/Ryou1987/ryou-miarui-j/blob/master/domenico-loia-hGV2TfOh0ns-unsplash.jpg?raw=true" alt="画像">
       </div>
     </div>
   </div>
